# vocabinterval

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
core/: run.py  settings.py
core/db/: __init__.py  card.py  engine.py  user.py
core/db/migrations/: env.py
core/db/migrations/versions/: 08116effc47a_test.py  30716f4d1881_.py  31afe3a45704_first.py  757f9c46b427_.py  aa73980b6255_initial_migration.py  b6524494707f_bigint_userid.py  c79d0c06a016_add_page_size_dictionary_column.py  cc0a7e275656_initial_check.py  f975208b633f_initial_check.py
core/handlers/: __init__.py  basic.py  create_card.py  delete_card.py  edit_card.py  edit_repetition.py  get_cards.py  get_cards_repetition.py  paginations.py  start.py  statistic.py  utils.py
core/keyboards/: __init__.py  cancel_board.py  choose_field_to_edit.py  main_menu.py
core/middlewares/: register_check.py
core/scheduler/: Dockerfile  main.py
core/structures/: fsm_group.py
tests/: conftest.py  utils.py
tests/test_handlers/: test_start.py
